fix z-index on nav

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,4 +6,5 @@
   left: 0;
   right: 0;
   top: 0;
+  z-index: 10;
 }
